--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -26,7 +26,7 @@
     <string name="addedText">Dodano</string>
     <string name="toCartText">do koszyka</string>
     <string name="addToCartFirst">Najpierw dodaj coś do koszyka</string>
-    <string name="signupSuccessfully">Zalogowano pomyślnie możesz sie teraz zalogować</string>
+    <string name="signupSuccessfully">Zarejestrowano pomyślnie możesz sie teraz zalogować</string>
     <string name="orderSucces">Zamówienie złożone pomyślnie</string>
     <string name="mustBeLoggedIn">Zeby złożyć zamówienie musisz być zalogowany</string>
 </resources>
